{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 77,
  "lineage": "22064603-ff1c-7e6d-5e9e-4bb7d9794d13",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20210916",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/active-dahlia-323510/zones/us-west1-a/disks/soumyavm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/active-dahlia-323510/zones/us-west1-a/instances/soumyavm",
            "instance_id": "4504992303798443808",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "yLZtx7QEgBM=",
            "name": "soumyavm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.127.119.254",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/active-dahlia-323510/global/networks/default",
                "network_ip": "10.138.0.10",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/active-dahlia-323510/regions/us-west1/subnetworks/default",
                "subnetwork_project": "active-dahlia-323510"
              }
            ],
            "project": "active-dahlia-323510",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/active-dahlia-323510/zones/us-west1-a/instances/soumyavm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-west1-a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/active-dahlia-323510/global/networks/vpc-network",
            "mtu": 1460,
            "name": "vpc-network",
            "project": "active-dahlia-323510",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/active-dahlia-323510/global/networks/vpc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "cr-uscentral1-to-prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64519
              }
            ],
            "creation_timestamp": "2021-10-17T01:41:48.812-07:00",
            "id": "projects/active-dahlia-323510/regions/us-central1/routers/cr-uscentral1-to-prod-vpc-tunnels",
            "name": "cr-uscentral1-to-prod-vpc-tunnels",
            "network": "https://www.googleapis.com/compute/v1/projects/active-dahlia-323510/global/networks/default",
            "project": "active-dahlia-323510",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/active-dahlia-323510/regions/us-central1/routers/cr-uscentral1-to-prod-vpc-tunnels"
          }
        }
      ]
    },
    {
      "module": "module.vpn-manage-internal",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "vpn_gw_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.105.9.13",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-10-17T01:41:49.562-07:00",
            "id": "projects/active-dahlia-323510/regions/us-west1/addresses/ip-vpn-manage-internal",
            "name": "ip-vpn-manage-internal",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "active-dahlia-323510",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/active-dahlia-323510/regions/us-west1/addresses/ip-vpn-manage-internal"
          }
        }
      ]
    },
    {
      "module": "module.vpn-manage-internal",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "vpn_esp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2021-10-17T01:42:03.563-07:00",
            "id": "projects/active-dahlia-323510/regions/us-west1/forwardingRules/vpn-manage-internal-esp",
            "ip_address": "34.105.9.13",
            "ip_protocol": "ESP",
            "is_mirroring_collector": false,
            "load_balancing_scheme": "EXTERNAL",
            "name": "vpn-manage-internal-esp",
            "network_tier": "PREMIUM",
            "project": "active-dahlia-323510",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/active-dahlia-323510/regions/us-west1/forwardingRules/vpn-manage-internal-esp",
            "target": "https://www.googleapis.com/compute/v1/projects/active-dahlia-323510/regions/us-west1/targetVpnGateways/vpn-manage-internal"
          },
          "dependencies": [
            "module.vpn-manage-internal.google_compute_address.vpn_gw_ip",
            "module.vpn-manage-internal.google_compute_vpn_gateway.vpn_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.vpn-manage-internal",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.vpn-prod-internal",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "vpn_gw_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.233.178.242",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-10-17T01:41:49.318-07:00",
            "id": "projects/active-dahlia-323510/regions/us-west1/addresses/ip-vpn-prod-internal",
            "name": "ip-vpn-prod-internal",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "active-dahlia-323510",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/active-dahlia-323510/regions/us-west1/addresses/ip-vpn-prod-internal"
          }
        }
      ]
    },
    {
      "module": "module.vpn-prod-internal",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "vpn_esp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2021-10-17T01:42:03.002-07:00",
            "id": "projects/active-dahlia-323510/regions/us-west1/forwardingRules/vpn-prod-internal-esp",
            "ip_address": "35.233.178.242",
            "ip_protocol": "ESP",
            "is_mirroring_collector": false,
            "load_balancing_scheme": "EXTERNAL",
            "name": "vpn-prod-internal-esp",
            "network_tier": "PREMIUM",
            "project": "active-dahlia-323510",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/active-dahlia-323510/regions/us-west1/forwardingRules/vpn-prod-internal-esp",
            "target": "https://www.googleapis.com/compute/v1/projects/active-dahlia-323510/regions/us-west1/targetVpnGateways/vpn-prod-internal"
          },
          "dependencies": [
            "module.vpn-prod-internal.google_compute_address.vpn_gw_ip",
            "module.vpn-prod-internal.google_compute_vpn_gateway.vpn_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.vpn-prod-internal",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "vpn_udp4500",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2021-10-17T01:42:03.525-07:00",
            "id": "projects/active-dahlia-323510/regions/us-west1/forwardingRules/vpn-prod-internal-udp4500",
            "ip_address": "35.233.178.242",
            "ip_protocol": "UDP",
            "is_mirroring_collector": false,
            "load_balancing_scheme": "EXTERNAL",
            "name": "vpn-prod-internal-udp4500",
            "network_tier": "PREMIUM",
            "port_range": "4500-4500",
            "project": "active-dahlia-323510",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/active-dahlia-323510/regions/us-west1/forwardingRules/vpn-prod-internal-udp4500",
            "target": "https://www.googleapis.com/compute/v1/projects/active-dahlia-323510/regions/us-west1/targetVpnGateways/vpn-prod-internal"
          },
          "dependencies": [
            "module.vpn-prod-internal.google_compute_address.vpn_gw_ip",
            "module.vpn-prod-internal.google_compute_vpn_gateway.vpn_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.vpn-prod-internal",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "vpn_udp500",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2021-10-17T01:42:04.635-07:00",
            "id": "projects/active-dahlia-323510/regions/us-west1/forwardingRules/vpn-prod-internal-udp500",
            "ip_address": "35.233.178.242",
            "ip_protocol": "UDP",
            "is_mirroring_collector": false,
            "load_balancing_scheme": "EXTERNAL",
            "name": "vpn-prod-internal-udp500",
            "network_tier": "PREMIUM",
            "port_range": "500-500",
            "project": "active-dahlia-323510",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/active-dahlia-323510/regions/us-west1/forwardingRules/vpn-prod-internal-udp500",
            "target": "https://www.googleapis.com/compute/v1/projects/active-dahlia-323510/regions/us-west1/targetVpnGateways/vpn-prod-internal"
          },
          "dependencies": [
            "module.vpn-prod-internal.google_compute_address.vpn_gw_ip",
            "module.vpn-prod-internal.google_compute_vpn_gateway.vpn_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.vpn-prod-internal",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "10.17.0.0/22",
            "id": "projects/active-dahlia-323510/global/routes/vpn-prod-internal-tunnel1-route1",
            "name": "vpn-prod-internal-tunnel1-route1",
            "network": "https://www.googleapis.com/compute/v1/projects/active-dahlia-323510/global/networks/default",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "https://www.googleapis.com/compute/v1/projects/active-dahlia-323510/regions/us-west1/vpnTunnels/vpn-tn-prod-internal-1",
            "priority": 1000,
            "project": "active-dahlia-323510",
            "self_link": "https://www.googleapis.com/compute/v1/projects/active-dahlia-323510/global/routes/vpn-prod-internal-tunnel1-route1",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpn-prod-internal.google_compute_address.vpn_gw_ip",
            "module.vpn-prod-internal.google_compute_forwarding_rule.vpn_esp",
            "module.vpn-prod-internal.google_compute_forwarding_rule.vpn_udp4500",
            "module.vpn-prod-internal.google_compute_forwarding_rule.vpn_udp500",
            "module.vpn-prod-internal.google_compute_vpn_gateway.vpn_gateway",
            "module.vpn-prod-internal.google_compute_vpn_tunnel.tunnel-static",
            "module.vpn-prod-internal.random_id.ipsec_secret"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "10.16.80.0/24",
            "id": "projects/active-dahlia-323510/global/routes/vpn-prod-internal-tunnel1-route2",
            "name": "vpn-prod-internal-tunnel1-route2",
            "network": "https://www.googleapis.com/compute/v1/projects/active-dahlia-323510/global/networks/default",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "https://www.googleapis.com/compute/v1/projects/active-dahlia-323510/regions/us-west1/vpnTunnels/vpn-tn-prod-internal-1",
            "priority": 1000,
            "project": "active-dahlia-323510",
            "self_link": "https://www.googleapis.com/compute/v1/projects/active-dahlia-323510/global/routes/vpn-prod-internal-tunnel1-route2",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpn-prod-internal.google_compute_address.vpn_gw_ip",
            "module.vpn-prod-internal.google_compute_forwarding_rule.vpn_esp",
            "module.vpn-prod-internal.google_compute_forwarding_rule.vpn_udp4500",
            "module.vpn-prod-internal.google_compute_forwarding_rule.vpn_udp500",
            "module.vpn-prod-internal.google_compute_vpn_gateway.vpn_gateway",
            "module.vpn-prod-internal.google_compute_vpn_tunnel.tunnel-static",
            "module.vpn-prod-internal.random_id.ipsec_secret"
          ]
        }
      ]
    }
  ]
}